--- a/STANDARD/assets/views/ServiceClients/TableauSC.html
+++ b/STANDARD/assets/views/ServiceClients/TableauSC.html
@@ -64,7 +64,7 @@
                                             <!-- invite du controller dynamictabctrl pour confirmer la modification grace a la fonction UpdateDate() -> OK   -->
                                             <div class="modal-footer">
                                                 <button class="btn btn-primary" ng-click="dtclick($index)">OK</button>
-                                                <button class="btn btn-primary" ng-click="cancel($event)">Cancel</button>
+                                                <button class="btn btn-primary" ng-click="cancel($event)">Annuler</button>
                                             </div>
                                             <div>
                                     </script>
