--- a/STANDARD/assets/views/Livreur/ValidationLivraison.html
+++ b/STANDARD/assets/views/Livreur/ValidationLivraison.html
@@ -52,7 +52,7 @@
                                 <td class="hidden-xs">{{x.MONTANT}}</td>
                                 <td>
                                     <div class="center">
-                                        <button type="button" ng-click="ConfirmationD($index)" class="btn btn-wide btn-success">
+                                        <button type="button" ng-click="ConfirmationD(x)" class="btn btn-wide btn-success">
                                         Confirmer
                                     </button>
                                     </div>
