--- a/STANDARD/assets/views/ServiceClients/TableauSC.html
+++ b/STANDARD/assets/views/ServiceClients/TableauSC.html
@@ -27,6 +27,7 @@
                                 <th class="hidden-xs">N° Telephone</th>
                                 <th class="hidden-xs">Date et heure de collecte</th>
                                 <th class="hidden-xs">Adresse Collecte </th>
+                                <th class="hidden-xs">Heure de reservation </th>
                                 <th><i class="fa fa-time"></i> Modifier </th>
                             </tr>
                         </thead>
@@ -38,6 +39,7 @@
                                 <td class="hidden-xs">{{x.TELEPHONE_CLIENT}}</td>
                                 <td class="hidden-xs">{{x.DD_COMMANDE}}</td>
                                 <td class="hidden-xs">{{x.Adresse_Complete_Collect}}</td>
+                                <td class="hidden-xs">{{x.DATE_C_RES}}</td>
                                 <td>
 
                                     <div class="visible-md visible-lg visible-sm visible-xs">
