--- a/STANDARD/assets/views/ServiceClients/TableauSC_clients.html
+++ b/STANDARD/assets/views/ServiceClients/TableauSC_clients.html
@@ -1,9 +1,9 @@
-<!-- start: PAGE TITLE --> 
+<!-- start: PAGE TITLE -->
 <section id="page-title" class="page-title-center">
     <div class="row">
         <div class="col-sm-8 col-sm-offset-2">
             <h1 class="mainTitle">Nos Clients</h1>
-           <!--  <span class="mainDescription">Themify Icons is a complete set of icons for use in web design and apps, consisting of 320+ pixel-perfect, hand-crafted icons that draw inspiration from Apple iOS 7</span> -->
+            <!--  <span class="mainDescription">Themify Icons is a complete set of icons for use in web design and apps, consisting of 320+ pixel-perfect, hand-crafted icons that draw inspiration from Apple iOS 7</span> -->
             <input ng-model="searchText" class="form-control text-center margin-top-15" type="text" placeholder="Rechercher un client">
             <div ncy-breadcrumb></div>
         </div>
@@ -12,53 +12,64 @@
 <!-- end: PAGE TITLE -->
 <!-- start: YOUR CONTENT HERE -->
 
-    <div class="container-fluid container-fullw ">
+<div class="container-fluid container-fullw ">
     <div ng-controller="dynamicTableCtrl" class="row">
         <div class="col-md-12">
             <h5 class="over-title margin-top-20 margin-bottom-15"> <span class="text-bold">Liste des clients</span></h5>
             <div ng-init="getClient()" class="table-responsive">
-                
-                
 
-               <!-- Debut: Table  -->
 
-                       <table class="table table-striped table-hover" id="sample-table-2">
-                                <thead>
-                                    <tr>
-                                        <th >#</th>
-                                        <th >Nom et Prenom Client</th>
-                                        <th class="hidden-xs">TELEPHONE CLIENT</th>
-                                        <th class="hidden-xs">Email Client</th>
-                                        <th class="hidden-xs">Type Client </th>
-                                        <th class="hidden-xs">Adresse Collecte</th>
-                                        <th>Reserver</th>
-                                    </tr>
-                                </thead>
-                                <tbody>
-                                    <tr ng-repeat="y in clientsc  | filter:searchText ">
-                                        <td>{{y.ID_CLIENT}}</td>
-                                        <td>{{y.NOM_CLIENT}} {{y.PRENOM_CLIENT}}</td>
-                                        <td class="hidden-xs">{{y.TELEPHONE_CLIENT}}</td>
-                                        <td class="hidden-xs">{{y.Email}}</td>
-                                        <td class="hidden-xs">{{y.TYPE_CLIENT}}</td>
-                                        <td class="hidden-xs">{{y.Adresse_Complete_Collect}}</td>
-                                        <td class="center">
-                                        <button class="visible-md visible-lg hidden-sm hidden-xs btn btn-primary btn-wide btn-scroll btn-scroll-top ti-shopping-cart" type="button" ng-click="Redirect($index)">
+
+                <!-- Debut: Table  -->
+
+                <table class="table table-striped table-hover" id="sample-table-2">
+                    <thead>
+                        <tr>
+                            <th>#</th>
+                            <th>Nom et Prenom Client</th>
+                            <th class="hidden-xs">TELEPHONE CLIENT</th>
+                            <th class="hidden-xs">Email Client</th>
+                            <th class="hidden-xs">Type Client </th>
+                            <th class="hidden-xs">Adresse Collecte</th>
+                            <th>Reserver</th>
+                            <th>Supprimer </th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr ng-repeat="y in clientsc  | filter:searchText ">
+                            <td>{{y.ID_CLIENT}}</td>
+                            <td>{{y.NOM_CLIENT}} {{y.PRENOM_CLIENT}}</td>
+                            <td class="hidden-xs">{{y.TELEPHONE_CLIENT}}</td>
+                            <td class="hidden-xs">{{y.Email}}</td>
+                            <td class="hidden-xs">{{y.TYPE_CLIENT}}</td>
+                            <td class="hidden-xs">{{y.Adresse_Complete_Collect}}</td>
+                            <td class="center">
+                                <button class="visible-md visible-lg hidden-sm hidden-xs btn btn-primary btn-wide btn-scroll btn-scroll-top ti-shopping-cart" type="button" ng-click="Redirect($index)">
                                             <span>Reserver</span>
                                         </button>
-                                        <div class="visible-xs visible-sm hidden-md hidden-lg">
-                                                <a ng-click="Redirect($index)" class="btn btn-transparent btn-xs" tooltip-placement="top" uib-tooltip="Reserver"><i class="fa fa-bookmark"></i></a>
-                                        </div>
 
-                                        </td>
-                                    </tr>
-                                   </tbody>
-                                </table>
+                                <div class="visible-xs visible-sm hidden-md hidden-lg">
+                                    <a ng-click="Redirect($index)" class="btn btn-transparent btn-xs" tooltip-placement="top" uib-tooltip="Reserver"><i class="fa fa-bookmark"></i></a>
+                                </div>
 
-               <!--  Fin : Table  -->
+                            </td>
+                            <td>
+                                <button class="visible-md visible-lg hidden-sm hidden-xs btn btn-danger btn-wide btn-scroll btn-scroll-left fa fa-close" type="button" ng-click="RemoveClient(y)">
+                                            <span>Supprimer</span>
+                                        </button>
+                                <div class="visible-xs visible-sm hidden-md hidden-lg">
+                                    <a ng-click="RemoveClient(y)" class="btn btn-transparent btn-xs" tooltip-placement="top" uib-tooltip="Supprimer"><i class="fa fa-close"></i></a>
+                                </div>
+
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+
+                <!--  Fin : Table  -->
 
             </div>
         </div>
-        </div>
     </div>
+</div>
 <!-- end: YOUR CONTENT HERE -->
