--- a/STANDARD/assets/views/ServiceProductions/RecuProd.html
+++ b/STANDARD/assets/views/ServiceProductions/RecuProd.html
@@ -110,6 +110,12 @@
                                         Imprimer
                                     </button>
                             </td>
+                            <!-- <td>
+                                <button class="btn btn-primary" ng-click="findPrinter()">
+
+                                        Imprimer
+                                    </button>
+                            </td> -->
                             <td>
                                 <!-- ng-if=" p.MONTANT ==  '0'" -->
                                 <button class="btn btn-success" ng-click="EditPrice('left',p)">
@@ -138,77 +144,15 @@
     <script type="text/ng-template" id="invoice.html" ng-controller="MyCtrl">
         <div class="row" ng-init="MyAllBasketsY()" id="contentPdf">
             <div class="well col-xs-10 col-sm-10 col-md-6 col-xs-offset-1 col-sm-offset-1 col-md-offset-3">
-                <!--   <div class="row">
-                        <div class="col-xs-6 col-sm-6 col-md-6">
-                            <address>
-                                <strong>{{Myname}} </strong>
-                                <br>
-                                2135 Sunset Blvd
-                                <br>
-                                Los Angeles, CA 90026
-                                <br>
-                                <abbr title="Phone">P:</abbr> (213) 484-6829
-                            </address>
-                        </div>
-                        <div class="col-xs-6 col-sm-6 col-md-6 text-right">
-                            <!-- <p>
-                                <em>Ref Produit: {{MyProductInfo.ID_PRODUIT}}</em>
-                            </p> -->
 
-                <!--  <p>
-                                <em>Reçu #: {{MyProductInfo.ID_COMMANDE}}</em>
-                            </p>
-                        </div>
-                    </div>  -->
                 <div class="row">
                     <div class="text-center">
                         <h2> Reçu #: {{MyProductInfo.ID_COMMANDE}} </h2>
                         <h1>{{cpta}} / {{cptq}}</h1>
                     </div>
                     </span>
-                    <!-- <table class="table table-hover">
-                            <thead>
-                                <tr>
-                                    <th>Produit</th>
-                                    <th>#</th>
-                                    <th class="text-center">Prix</th>
-                                    <th class="text-center">Total</th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                <tr>
-                                    <td class="col-md-9"><em>{{MyProductInfo.DESIGNATION}}</em></h4></td>
-                                    <td class="col-md-1" style="text-align: center"> {{MyProductInfo.ID_PRODUIT}} </td>
-                                    <td class="col-md-1 text-center">{{MyProductInfo.PRIX}} DH</td>
-                                    <td class="col-md-1 text-center">{{MyProductInfo.MyTotal}} DH</td>
-                                </tr>
-                                <tr>
-                                    <td>   </td>
-                                    <td>   </td>
-                                    <td class="text-right">
-                                    <p>
-                                        <strong>Subtotal: </strong>
-                                    </p>
-                                    <p>
-                                        <strong>TVA: </strong>
-                                    </p></td>
-                                    <td class="text-center">
-                                    <p>
-                                        <strong>6.94 DH</strong>
-                                    </p>
-                                    <p>
-                                        <strong>20%</strong>
-                                    </p></td>
-                                </tr>
-                                <tr>
-                                    <td>   </td>
-                                    <td>   </td>
-                                    <td class="text-right"><h4><strong>Total: </strong></h4></td>
-                                    <td class="text-center text-danger"><h4><strong>{{MyProductInfo.MyTotal}}DH</strong></h4></td>
-                                </tr>
-                            </tbody>
-                        </table> -->
-                    <button type="button" class="btn btn-success btn-lg btn-block" onclick="pdfToHTML()">
+
+                    <button type="button" class="btn btn-success btn-lg btn-block" ng-click="goEpson()">
                             <a href="javascript:pdfFromHTML()">Imprimer </a>
                             <span class="fa fa-print">
                             </span>
